--- a/template/components/navbar.html
+++ b/template/components/navbar.html
@@ -1,3 +1,5 @@
+{% load kategori_list %}
+{% kategori_list as kategoriler %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,10 +16,9 @@
             Kategoriler
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            {% for kategori in kategoriler %}
+            <a class="dropdown-item" href="#">{{ kategori.isim }}</a>
+            {% endfor %}
           </div>
         </li>
       </ul>
