--- a/blog/templates/pages/kategori.html
+++ b/blog/templates/pages/kategori.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-  Anasayfa
+  Kategori
 {% endblock %}
 
 
@@ -29,21 +29,22 @@
 {% endfor %}
 
 <nav aria-label="Page navigation example">
-  <ul class="pagination">
-    
-    {% if yazilar.has_previous %}
-    <li class="page-item"><a class="page-link" href="?sayfa={{ yazilar.previous_page_number }}">Previous</a></li>
-    
-    {% endif %}
+    <ul class="pagination">
       
-    <li class="page-item"><a class="page-link" href="#">{{ yazilar.number }}</a></li>
-    
-    {% if yazilar.has_next %}
-      <li class="page-item"><a class="page-link" href="?sayfa={{ yazilar.next_page_number }}">Next</a></li>
-    {% endif %}
+      {% if yazilar.has_previous %}
+      <li class="page-item"><a class="page-link" href="?sayfa={{ yazilar.previous_page_number }}">Previous</a></li>
       
-  </ul>
-</nav>
+      {% endif %}
+        
+      <li class="page-item"><a class="page-link" href="#">{{ yazilar.number }}</a></li>
+      
+      {% if yazilar.has_next %}
+        <li class="page-item"><a class="page-link" href="?sayfa={{ yazilar.next_page_number }}">Next</a></li>
+      {% endif %}
+        
+    </ul>
+  </nav>
+    
 
   
 {% endblock %}
