--- a/template/components/navbar.html
+++ b/template/components/navbar.html
@@ -17,7 +17,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             {% for kategori in kategoriler %}
-            <a class="dropdown-item" href="#">{{ kategori.isim }}</a>
+            <a class="dropdown-item" href="{% url 'kategori' kategoriSlug=kategori.slug %}">{{ kategori.isim }}</a>
             {% endfor %}
           </div>
         </li>
