Arama Yazi Detay ve Yorumlar eklendi

--- a/template/components/navbar.html
+++ b/template/components/navbar.html
@@ -1,7 +1,7 @@
 {% load kategori_list %}
 {% kategori_list as kategoriler %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Blog</a>
+    <a class="navbar-brand" href="{% url 'anasayfa' %}">Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,8 +22,8 @@
           </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form action='{% url "anasayfa" %}' class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" name='sorgu' placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
