--- a/blog/templates/pages/anasayfa.html
+++ b/blog/templates/pages/anasayfa.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">{{ yazi.baslik }}</h5>
+          <h5 class="card-title"><a href="{% url 'detay' slug=yazi.slug %}" class='text-muted'>{{ yazi.baslik }}</a></h5>
           <p class="card-text">{{ yazi.icerik }}</p>
           <p class="card-text"><small class="text-muted">{{ yazi.duzenleme_tarihi}}</small></p>
         </div>
