Yazi Ekleme Formu olusturuldu

--- a/template/components/sidebar.html
+++ b/template/components/sidebar.html
@@ -8,7 +8,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Profil</li>
         <li class="list-group-item">Profil Guncelle</li>
-        <li class="list-group-item">Yazi Ekle</li>
+        <li class="list-group-item"><a href="{% url 'yazi-ekle' %}" class='text-muted'>Yazi Ekle</a></li>
         <li class="list-group-item"><a href="{% url 'yazilarim' %}" class='text-muted'>Yazilarim</a></li>
         <li class="list-group-item">Cikis</li>
       </ul>
