--- a/blog/templates/pages/kategori.html
+++ b/blog/templates/pages/kategori.html
@@ -14,7 +14,7 @@
   <div class="card mb-3">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="{{ yazi.resmi.url }}" class="card-img" alt="...">
+        <img src="{{ yazi.resim.url }}" class="card-img" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
