Yazi Guncelleme Formu olusturuldu

--- a/blog/templates/pages/detay.html
+++ b/blog/templates/pages/detay.html
@@ -18,6 +18,9 @@
           <h5 class="card-title">{{ yazi.baslik }}</h5>
           <p class="card-text">{{ yazi.icerik }}</p>
           <p class="card-text"><small class="text-muted">{{ yazi.duzenleme_tarihi}}</small></p>
+          <p>
+            <a href="{% url 'yazi-guncelle' slug=yazi.slug %}" class='btn btn-danger'>Guncelle</a>
+          </p>
         </div>
       </div>
     </div>
