--- a/template/base.html
+++ b/template/base.html
@@ -22,6 +22,17 @@
         {% include 'components/sidebar.html' %}
       </div>
     </div>
+    <div class="card mt-5">
+      <div class="card-header">
+        BerBer Blog
+      </div>
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p>1976'dan Beri</p>
+          <footer class="blockquote-footer">Fiko <cite title="Source Title">Django</cite></footer>
+        </blockquote>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
