Cikis islemi yapilmistir

--- a/template/components/sidebar.html
+++ b/template/components/sidebar.html
@@ -10,7 +10,7 @@
         <li class="list-group-item">Profil Guncelle</li>
         <li class="list-group-item"><a href="{% url 'yazi-ekle' %}" class='text-muted'>Yazi Ekle</a></li>
         <li class="list-group-item"><a href="{% url 'yazilarim' %}" class='text-muted'>Yazilarim</a></li>
-        <li class="list-group-item">Cikis</li>
+        <li class="list-group-item"><a href="{% url 'cikis' %}" class=text-muted>Cikis</a></li>
       </ul>
       {% else %}
       <ul class="list-group list-group-flush">
