--- a/template/components/sidebar.html
+++ b/template/components/sidebar.html
@@ -7,7 +7,7 @@
       {% if request.user.is_authenticated %}
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Profil</li>
-        <li class="list-group-item">Profil Guncelle</li>
+        <li class="list-group-item"><a href="{% url 'sifre-degistir' %}" class=text-muted>Sifre Degistir</a></li>
         <li class="list-group-item"><a href="{% url 'yazi-ekle' %}" class='text-muted'>Yazi Ekle</a></li>
         <li class="list-group-item"><a href="{% url 'yazilarim' %}" class='text-muted'>Yazilarim</a></li>
         <li class="list-group-item"><a href="{% url 'cikis' %}" class=text-muted>Cikis</a></li>
