--- a/template/components/sidebar.html
+++ b/template/components/sidebar.html
@@ -14,8 +14,8 @@
       </ul>
       {% else %}
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Giris</li>
-        <li class="list-group-item">Kayit Olun</li>
+        <li class="list-group-item"><a href="{% url 'giris' %}" class='text-muted'>Giris</a></li>
+        <li class="list-group-item"><a href="{% url 'kayit' %}" class='text-muted'>Kayit Olun</a></li>
       </ul>
       {% endif %}
         
